# ccchat

./: .gitignore
server/ChatServer/src/: chat_grpc_client.cc  chat_grpc_client.h  chat_service_impl.cc  chatserver.cc  chatserver.h  const.h  data.h  logic_system.cc  logic_system.h  main.cc  msg_node.cc  msg_node.h  mysql_dao.cc  mysql_dao.h  mysql_mgr.cc  mysql_mgr.h  session.cc  session.h  singleton.h  user_mgr.cc
server/ChatServer2/: CMakeLists.txt
server/ChatServer2/src/: chat_service_impl.cc  chat_service_impl.h  chatserver.cc  chatserver.h  config_mgr.cc  config_mgr.h  const.h  logic_system.cc  logic_system.h  main.cc  message.proto  msg_node.cc  msg_node.h  mysql_dao.cc  mysql_dao.h  mysql_mgr.cc  mysql_mgr.h  redis_mgr.cc  redis_mgr.h  session.cc  session.h  status_grpc_client.cc  status_grpc_client.h  user_mgr.h
server/GateServer/: CMakeLists.txt  bak-CMakeLists.txt
server/GateServer/src/: config.ini  config_mgr.cc  config_mgr.h  const.h  gate_server.cc  gate_server.h  http_connection.cc  http_connection.h  logic_system.cc  logic_system.h  main.cc  mysql_dao.cc  mysql_dao.h  mysql_mgr.cc  mysql_mgr.h  redis_mgr.cc  singleton.h  status_grpc_client.cc  status_grpc_client.h  varify_grpc_client.cc  varify_grpc_client.h
server/GateServer/test/: test_hiredis.cc
server/StatusServer/: CMakeLists.txt
server/StatusServer/src/: asio_io_context_pool.cc  asio_io_context_pool.h  config_mgr.h  const.h  main.cc  message.pb.cc  message.proto  redis_mgr.h  status_service_impl.cc  status_service_impl.h
server/VarifyServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
